--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,34 @@
 version: '3.8'
 
-networks:
-  laravel:
-  
 services:
-#NGINX Service  
-  web:
+  nginx:
     container_name: nginx
     image: nginx:latest
     restart: always
     ports:
       - 80:80
     volumes:
-      - .src:/var/www/html:delegated
+      - ./nginx/default.conf:/etc/ngnix/conf.d/default.conf
     depends_on:
       - php
       - mysql
-    networks:
-      - laravel
+
+  php:
+    container_name: php
+    image: php:8.1
+    restart: always
+    volumes:
+      - "/data/ptsp:/var/www/html"
+  
+  database:
+    container_name: mysql
+    image: mysql:8.1
+    restart: always
+    ports:
+    - 3306:3306
+    environment:
+      - MYSQL_DATABASE=ptsp
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=706Jakarta
+      - MYSQL_ROOT_PASSWORD=706Jakarta
+
