--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,12 @@ services:
       - MYSQL_PASSWORD=706Jakarta
       - MYSQL_ROOT_PASSWORD=706Jakarta
 
+  ptsp:
+    image: ptsp
+    stdin_open: true # docker run -i
+    tty: true        # docker run -t
+    ports:
+      -81:80
+    volumes:
+      - "/data/ptsp:/var/www/html"
+    restart: unless-stopped
