--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3'
+version: '3.9'
 
 services:
-  laravel-docker:
-    container_name: laravel-docker
-    build: .
+  #Nginx Service
+  webserver:
+    container_name: webserver
+    image: nginx:latest
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./laravel-app:/var/www/html
-    ports:
-      - 9000:80
-  
-  mysql_db:
-    image: mysql:8.1
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: taravel_docker
-    ports:
-      - 3306:3306
+      - ./src:/var/www
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
