--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.9'
 
 services:
-  #Nginx Service
-  webserver:
-    container_name: webserver
+  nginx:
+    container_name: nginx_webserver
     image: nginx:latest
     restart: unless-stopped
     tty: true
